--- a/c4g_go/views/insert.html
+++ b/c4g_go/views/insert.html
@@ -2,17 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Insert</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 </head>
 <body>
-    <form action="/insert" method="post">
-        <input type="text" name="name">
-        <input type="text" name="location">
-        <input type="text" name="description">
-        <input type="text" name="speciality">
+<div class="container">
 
-        <button type="submit" class="btn btn-secondary">Insert</button>
-    </form>
+    <h1 align="center" style="margin-top: 10vh">
+        Get your institution listed!
+    </h1>
 
+    <br>
+
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <form action="/insert" method="post">
+
+                <div class="form-group">
+                    <label for="name">Institution Name</label>
+                    <input type="text" class="form-control" id="name" placeholder="Enter name">
+                </div>
+
+                <div class="form-group">
+                    <label for="name">Speciality</label>
+                    <input type="text" class="form-control" id="name" >
+                </div>
+
+                <div class="form-group">
+                    <label for="name">Location</label>
+                    <input type="text" class="form-control" id="name">
+                </div>
+
+                <div class="form-group">
+                    <label for="name">Contact Email</label>
+                    <input type="email" class="form-control" id="name">
+                </div>
+
+                <div class="form-group">
+                    <label for="name">Description of Institution</label>
+                    <textarea class="form-control" id="desc" rows="3"></textarea>
+                </div>
+
+                <br>
+                <button type="submit" class="btn btn-primary">Submit</button>
+
+            </form>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
