--- a/c4g_go/views/home.html
+++ b/c4g_go/views/home.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>MindSearch</title>
     <style>
         .home-content {
@@ -31,7 +32,7 @@
             <div class="col-md-6">
                 <form class="input-group input-group-lg" action="/search" method="get">
                     <input type="text" class="form-control" name="keyword"
-                           placeholder="Search topics or keywords">
+                           placeholder="What do you need help with?">
                     <div class="input-group-append">
                         <button type="submit" class="btn btn-secondary">Search</button>
                     </div>
@@ -41,7 +42,10 @@
         </div>
         <br>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 text-center">
+
+                <button type="button" class="btn btn-outline-primary"><a href="/insertPage">Get your institution listed</a>
+                </button>
 
             </div>
         </div>
